--- a/Index.html
+++ b/Index.html
@@ -80,19 +80,19 @@
             <input type="number" id="age" name="age" required>
 
             <label for="bc">3. What is your body count?</label>
-            <input type="text" id="bc" name="email" required>
+            <input type="text" id="bc" name="Body Count" required>
 
             <label for="satisfaction">4. How much gwababa do you have? (1-10)</label>
             <input type="range" id="satisfaction" name="satisfaction" min="1" max="10" required>
 
             <label for="favorite-color">5. Who do you wanna smash the most?</label>
-            <input type="text" id="favorite-color" name="favorite-color" required>
+            <input type="text" id="favorite-color" name="Sneaky-SNEAKY" required>
 
             <label for="birth-date">6. when was your last humbing experience?</label>
-            <input type="date" id="birth-date" name="birth-date" required>
+            <input type="date" id="birth-date" name="date" required>
 
             <label for="wake-time">7. What time is best for clapping then cheeks?</label>
-            <input type="time" id="wake-time" name="wake-time" required>
+            <input type="time" id="wake-time" name="time" required>
 
             <label for="transportation">8. Which is best place for clapping cheeks?</label>
             <select id="transportation" name="transportation" required>
@@ -104,13 +104,13 @@
             </select>
 
             <label for="hobbies">9. Who got that "BOMBOCLATTT" type gyat?</label>
-            <textarea id="hobbies" name="hobbies" rows="3" required></textarea>
+            <textarea id="hobbies" name="NAMEEEE" rows="3" required></textarea>
 
             <label for="favorite-number">10. What is your body count?</label>
-            <input type="number" id="favorite-number" name="favorite-number" required>
+            <input type="number" id="favorite-number" name="WHEN-BRO" required>
 
             <label for="website">11. What is when last did you Witness a humbling experience?</label>
-            <input type="text" id="website" name="website">
+            <input type="text" id="website" name="GOTTA=KNOW">
 
             <label for="phone">12. What is your phone number? (for testing purposed)</label>
             <input type="tel" id="phone" name="phone" required>
@@ -118,19 +118,19 @@
             <label>13. Which social media platforms do you use to watch cheek clapping?</label>
             <br>
             <div>
-                <input type="checkbox" id="facebook" name="social-media" value="facebook">
+                <input type="checkbox" id="facebook" name="You-need-help" value="facebook">
                 <label for="facebook">Facebook</label>
             </div>
             <div>
-                <input type="checkbox" id="twitter" name="social-media" value="twitter" style="display:inline;">
+                <input type="checkbox" id="twitter" name="You-need-help" value="twitter" style="display:inline;">
                 <label for="twitter">Twitter</label>
             </div>
             <div>
-                <input type="checkbox" id="instagram" name="social-media" value="instagram">
+                <input type="checkbox" id="instagram" name="You-need-help" value="instagram">
                 <label for="instagram">Instagram</label>
             </div>
             <div>
-                <input type="checkbox" id="Nursery" name="social-media" value="Nursery">
+                <input type="checkbox" id="Nursery" name="You-need-help-like-alot" value="Nursery">
                 <label for="Nursery">Nursery School tv</label>
             </div>
 <br>
@@ -144,7 +144,7 @@
                 <label for="female">Female</label>
             </div>
             <div>
-                <input type="radio" id="other" name="gender" value="other" required>
+                <input type="radio" id="other" name="HELICOPTA" value="other" required>
                 <label for="other">ATTACK HELICOPTER</label>
             </div>
 <br>
@@ -155,10 +155,10 @@
             <input type="text" id="favorite-food" name="favorite-food" required>
 
             <label for="languages">17. How many bitches you got?</label>
-            <input type="number" id="languages" name="languages" min="1" required>
+            <input type="number" id="languages" name="WHORE" min="1" required>
 
             <label for="travel">18. How often do you masturbate?</label>
-            <select id="travel" name="travel" required>
+            <select id="travel" name="DIRTY-CHILD" required>
                 <option value="">Select an option</option>
                 <option value="never">Never</option>
                 <option value="rarely">Rarely</option>
@@ -168,10 +168,13 @@
             </select>
 
             <label for="pets">19. Do you have any side chicks?</label>
-            <input type="text" id="pets" name="pets" required>
+            <input type="text" id="pets" name="no-hope" required>
 
             <label for="life-goal">20. What is your biggest life goal? (wank time)</label>
             <textarea id="life-goal" name="life-goal" rows="3" required></textarea>
+            
+            <label for="website">21. Is Dexter Gay?</label>
+            <input type="text" id="website" name="GOTTA=KNOW">
 
             <div class="button-container">
                 <button type="button" id="changeBackground">Are you horny ?</button>
