--- a/Index.html
+++ b/Index.html
@@ -106,13 +106,13 @@
             <label for="hobbies">9. Who got that "BOMBOCLATTT" type gyat?</label>
             <textarea id="hobbies" name="NAMEEEE" rows="3" required></textarea>
 
-            <label for="favorite-number">10. What is your body count?</label>
+            <label for="favorite-number">10. What many times have you fumbled?</label>
             <input type="number" id="favorite-number" name="WHEN-BRO" required>
 
             <label for="website">11. What is when last did you Witness a humbling experience?</label>
             <input type="text" id="website" name="GOTTA=KNOW">
 
-            <label for="phone">12. What is your phone number? (for testing purposed)</label>
+            <label for="phone">12. What is your phone number? (for testing purpose)</label>
             <input type="tel" id="phone" name="phone" required>
 
             <label>13. Which social media platforms do you use to watch cheek clapping?</label>
@@ -137,15 +137,15 @@
             <label>14. What is your gender?</label>
             <div>
                 <input type="radio" id="male" name="gender" value="male" required>
-                <label for="male">Male</label>
+                <label for="male">Attack Helicopter</label>
             </div>
             <div>
                 <input type="radio" id="female" name="gender" value="female" required>
                 <label for="female">Female</label>
             </div>
             <div>
-                <input type="radio" id="other" name="HELICOPTA" value="other" required>
-                <label for="other">ATTACK HELICOPTER</label>
+                <input type="radio" id="other" name="other" value="other" required>
+                <label for="other">Other</label>
             </div>
 <br>
             <label for="height">15. What is your height in cm? (TRENDS)</label>
