--- a/Index.html
+++ b/Index.html
@@ -131,13 +131,13 @@
             </div>
             <div>
                 <input type="checkbox" id="Nursery" name="You-need-help-like-alot" value="Nursery">
-                <label for="Nursery">Nursery School tv</label>
+                <label for="Nursery">School</label>
             </div>
 <br>
             <label>14. What is your gender?</label>
             <div>
                 <input type="radio" id="male" name="gender" value="male" required>
-                <label for="male">Attack Helicopter</label>
+                <label for="male">Keybard</label>
             </div>
             <div>
                 <input type="radio" id="female" name="gender" value="female" required>
