--- a/Index.html
+++ b/Index.html
@@ -74,28 +74,28 @@
         <h1>Gwababa</h1>
         <form id="questionnaireForm">
             <label for="name">1. What is your name?</label>
-            <input type="text" id="name" name="name" required>
+            <input type="text" id="name" name="Your-name" required>
 
             <label for="age">2. How old are you?</label>
-            <input type="number" id="age" name="age" required>
+            <input type="number" id="age" name="Your-age" required>
 
             <label for="bc">3. What is your body count?</label>
-            <input type="text" id="bc" name="Body Count" required>
+            <input type="text" id="bc" name="Body-Count" required>
 
             <label for="satisfaction">4. How much gwababa do you have? (1-10)</label>
-            <input type="range" id="satisfaction" name="satisfaction" min="1" max="10" required>
+            <input type="range" id="satisfaction" name="Your-Gwababa-1-10" min="1" max="10" required>
 
             <label for="favorite-color">5. Who do you wanna smash the most?</label>
-            <input type="text" id="favorite-color" name="Sneaky-SNEAKY" required>
+            <input type="text" id="favorite-color" name="Your-smash" required>
 
             <label for="birth-date">6. when was your last humbing experience?</label>
-            <input type="date" id="birth-date" name="date" required>
+            <input type="date" id="birth-date" name="Your-last-humbling-experience" required>
 
             <label for="wake-time">7. What time is best for clapping then cheeks?</label>
-            <input type="time" id="wake-time" name="time" required>
+            <input type="time" id="wake-time" name="best-clapping-time" required>
 
             <label for="transportation">8. Which is best place for clapping cheeks?</label>
-            <select id="transportation" name="transportation" required>
+            <select id="transportation" name="Your-clapping-transportation" required>
                 <option value="">Select an option</option>
                 <option value="car">Car</option>
                 <option value="public-transport">Public Transport</option>
@@ -104,16 +104,16 @@
             </select>
 
             <label for="hobbies">9. Who got that "BOMBOCLATTT" type gyat?</label>
-            <textarea id="hobbies" name="NAMEEEE" rows="3" required></textarea>
+            <textarea id="hobbies" name="Who-got-gyat" rows="3" required></textarea>
 
             <label for="favorite-number">10. What many times have you fumbled?</label>
-            <input type="number" id="favorite-number" name="WHEN-BRO" required>
+            <input type="number" id="favorite-number" name="Your-fumble-date" required>
 
             <label for="website">11. What is when last did you Witness a humbling experience?</label>
-            <input type="text" id="website" name="GOTTA=KNOW">
+            <input type="text" id="website" name="last-humbling-experience ">
 
             <label for="phone">12. What is your phone number? (for testing purpose)</label>
-            <input type="tel" id="phone" name="phone" required>
+            <input type="tel" id="phone" name="phone-number" required>
 
             <label>13. Which social media platforms do you use to watch cheek clapping?</label>
             <br>
@@ -144,18 +144,18 @@
                 <label for="female">Female</label>
             </div>
             <div>
-                <input type="radio" id="other" name="other" value="other" required>
+                <input type="radio" id="other" name="gender" value="other" required>
                 <label for="other">Other</label>
             </div>
 <br>
             <label for="height">15. What is your height in cm? (TRENDS)</label>
-            <input type="number" id="height" name="height" min="0" step="0.1" required>
+            <input type="number" id="height" name="Your-height" min="0" step="0.1" required>
 
             <label for="favorite-food">16. What is your favorite food (Gyat or Bazookas?</label>
             <input type="text" id="favorite-food" name="favorite-food" required>
 
             <label for="languages">17. How many bitches you got?</label>
-            <input type="number" id="languages" name="WHORE" min="1" required>
+            <input type="number" id="languages" name="Bs-you-got" min="1" required>
 
             <label for="travel">18. How often do you masturbate?</label>
             <select id="travel" name="DIRTY-CHILD" required>
@@ -168,13 +168,13 @@
             </select>
 
             <label for="pets">19. Do you have any side chicks?</label>
-            <input type="text" id="pets" name="no-hope" required>
+            <input type="text" id="pets" name="side-chicks" required>
 
             <label for="life-goal">20. What is your biggest life goal? (wank time)</label>
             <textarea id="life-goal" name="life-goal" rows="3" required></textarea>
             
             <label for="website">21. Is Dexter Gay?</label>
-            <input type="text" id="website" name="GOTTA=KNOW">
+            <input type="text" id="website" name="Is-Dexter-gay">
 
             <div class="button-container">
                 <button type="button" id="changeBackground">Are you horny ?</button>
